--- a/Checklists/Base.lproj/Main.storyboard
+++ b/Checklists/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,13 +16,39 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="checkmark" indentationWidth="10" reuseIdentifier="ChecklistItem" id="ZOT-0O-cCp">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="detailDisclosureButton" indentationWidth="10" reuseIdentifier="ChecklistItem" id="ZOT-0O-cCp">
                                 <rect key="frame" x="0.0" y="92" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ZOT-0O-cCp" id="bBs-eo-Soc">
-                                    <frame key="frameInset" width="336" height="43"/>
+                                    <frame key="frameInset" width="308" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="✔️" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KLK-Vw-7fx">
+                                            <frame key="frameInset" minY="11" width="46" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="20E-T4-LFs">
+                                            <frame key="frameInset" minX="54" minY="11" width="246" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="20E-T4-LFs" firstAttribute="top" secondItem="bBs-eo-Soc" secondAttribute="topMargin" constant="2" id="EcR-r1-o73"/>
+                                        <constraint firstItem="KLK-Vw-7fx" firstAttribute="top" secondItem="bBs-eo-Soc" secondAttribute="top" constant="2" id="OJv-zu-wnW"/>
+                                        <constraint firstAttribute="trailing" secondItem="20E-T4-LFs" secondAttribute="trailing" id="R6U-D4-Ti4"/>
+                                        <constraint firstItem="KLK-Vw-7fx" firstAttribute="leading" secondItem="bBs-eo-Soc" secondAttribute="leading" id="ebQ-UI-DQ5"/>
+                                        <constraint firstAttribute="bottom" secondItem="KLK-Vw-7fx" secondAttribute="bottom" constant="2" id="gr6-8U-Kjv"/>
+                                        <constraint firstItem="20E-T4-LFs" firstAttribute="leading" secondItem="KLK-Vw-7fx" secondAttribute="trailing" constant="8" id="m84-Ht-D0E"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="20E-T4-LFs" secondAttribute="bottom" constant="2" id="pOj-J1-GVw"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="8w0-Zn-59p" kind="presentation" identifier="EditItem" trigger="accessoryAction" id="Fbi-fK-HAI"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -39,9 +66,9 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dWX-h5-fJN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="949.60000000000002" y="102.99850074962519"/>
+            <point key="canvasLocation" x="743" y="80"/>
         </scene>
-        <!--Add Item-->
+        <!--Add item-->
         <scene sceneID="Mzp-7n-kA6">
             <objects>
                 <tableViewController id="atd-41-bVy" customClass="AddItemViewController" customModule="Checklists" customModuleProvider="target" sceneMemberID="viewController">
@@ -56,7 +83,7 @@
                                         <rect key="frame" x="0.0" y="99" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KHP-7S-Ehm" id="cfu-0z-9mg">
-                                            <frame key="frameInset" width="375" height="43"/>
+                                            <frame key="frameInset" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name of the item" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9n9-Eh-hoU">
@@ -87,7 +114,7 @@
                             <outlet property="delegate" destination="atd-41-bVy" id="ajn-Zg-opH"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Add Item" id="grY-Dh-WZa">
+                    <navigationItem key="navigationItem" title="Add item" id="grY-Dh-WZa">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="MOV-Zo-ckq">
                             <connections>
                                 <action selector="cancel:" destination="atd-41-bVy" id="GwY-wc-j0A"/>
@@ -145,4 +172,7 @@
             <point key="canvasLocation" x="1679.2" y="102.99850074962519"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="hBr-p0-xe3"/>
+    </inferredMetricsTieBreakers>
 </document>
